--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>harshit site</title>
 </head>
 <body>
-    hi i am harshit
+    hi i am harshit.
+    I want to work at microsoft.
 </body>
 </html>
