--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     I want to work at microsoft.
 
     i have worked on few CLI apps and i will showcase here tomorrow.
+     i like to teach and i also like biopics.
 </body>
 </html>
